--- a/index.html
+++ b/index.html
@@ -447,12 +447,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul class="sectlevel1">
 <li><a href="#section-introduction-and-goals">1. Introducción y Objetivos</a>
 <ul class="sectlevel2">
-<li><a href="#_descripción_de_los_requisitos">1.1. Descripción de los requisitos</a></li>
+<li><a href="#_descripción_de_los_requisitos">1.1. Descripción de los Requisitos</a></li>
 <li><a href="#_objetivos_de_calidad">1.2. Objetivos de Calidad</a></li>
 <li><a href="#_stakeholders">1.3. Stakeholders</a></li>
 </ul>
 </li>
-<li><a href="#section-architecture-constraints">2. Restricciones de arquitectura</a></li>
+<li><a href="#section-architecture-constraints">2. Restricciones de Arquitectura</a></li>
 <li><a href="#section-context-and-scope">3. Contexto y Alcance</a>
 <ul class="sectlevel2">
 <li><a href="#_contexto_de_negocio">3.1. Contexto de Negocio</a></li>
@@ -461,7 +461,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#section-solution-strategy">4. Estrategia de Solución</a>
 <ul class="sectlevel2">
-<li><a href="#_deciciones_tecnológicas">4.1. Deciciones tecnológicas</a></li>
+<li><a href="#_deciciones_tecnológicas">4.1. Deciciones Tecnológicas</a></li>
 <li><a href="#_decisiones_sobre_la_descomposición_de_alto_nivel">4.2. Decisiones sobre la Descomposición de Alto Nivel</a></li>
 <li><a href="#_decisiones_sobre_cómo_lograr_los_objetivos_clave_de_calidad">4.3. Decisiones sobre cómo lograr los Objetivos Clave de Calidad</a></li>
 <li><a href="#_decisiones_organizativas_relevantes">4.4. Decisiones Organizativas Relevantes</a></li>
@@ -474,7 +474,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_nivel_3">5.3. Nivel 3</a></li>
 </ul>
 </li>
-<li><a href="#section-runtime-view">6. Vista en tiempo de ejecución</a>
+<li><a href="#section-runtime-view">6. Vista en Tiempo de Ejecución</a>
 <ul class="sectlevel2">
 <li><a href="#_un_usuario_se_registra_en_el_sistema">6.1. Un usuario se registra en el sistema</a></li>
 <li><a href="#_un_usuario_juega_al_juego_de_las_preguntas_y_solicita_pistas">6.2. Un usuario juega al juego de las preguntas y solicita pistas</a></li>
@@ -487,10 +487,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_infraestructura_nivel_2">7.2. Infraestructura Nivel 2</a></li>
 </ul>
 </li>
-<li><a href="#section-concepts">8. Conceptos transversales</a>
+<li><a href="#section-concepts">8. Conceptos Transversales</a>
 <ul class="sectlevel2">
-<li><a href="#_arquitectura_de_microservicios">8.1. Arquitectura de microservicios</a></li>
-<li><a href="#_experiencia_del_usuario">8.2. Experiencia del usuario</a></li>
+<li><a href="#_arquitectura_de_microservicios">8.1. Arquitectura de Microservicios</a></li>
+<li><a href="#_experiencia_del_usuario">8.2. Experiencia del Usuario</a></li>
 <li><a href="#_persistencia">8.3. Persistencia</a></li>
 <li><a href="#_seguridad_2">8.4. Seguridad</a></li>
 <li><a href="#_pruebas">8.5. Pruebas</a></li>
@@ -520,7 +520,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </li>
 <li><a href="#section-technical-risks">11. Riesgos y Deuda Técnica</a></li>
-<li><a href="#section-glossary">12. Glosario</a></li>
+<li><a href="#section-testing-report">12. Informe de Pruebas</a>
+<ul class="sectlevel2">
+<li><a href="#_test_unitarios">12.1. Test unitarios</a></li>
+<li><a href="#_test_e2e">12.2. Test E2E</a></li>
+<li><a href="#_test_de_carga">12.3. Test de carga</a></li>
+</ul>
+</li>
+<li><a href="#section-glossary">13. Glosario</a></li>
 </ul>
 </div>
 </div>
@@ -604,7 +611,7 @@ Esto incluye</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_descripción_de_los_requisitos">1.1. Descripción de los requisitos</h3>
+<h3 id="_descripción_de_los_requisitos">1.1. Descripción de los Requisitos</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -779,7 +786,7 @@ Estos interesados determinan el alcance y el nivel de detalle de su trabajo y su
 </div>
 </div>
 <div class="sect1">
-<h2 id="section-architecture-constraints">2. Restricciones de arquitectura</h2>
+<h2 id="section-architecture-constraints">2. Restricciones de Arquitectura</h2>
 <div class="sectionbody">
 <div class="sidebarblock arc42help">
 <div class="content">
@@ -1254,7 +1261,7 @@ el usuario por medio de pistas, sin dar dicha respuesta correcta directamente</p
 <h2 id="section-solution-strategy">4. Estrategia de Solución</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_deciciones_tecnológicas">4.1. Deciciones tecnológicas</h3>
+<h3 id="_deciciones_tecnológicas">4.1. Deciciones Tecnológicas</h3>
 <div class="sect3">
 <h4 id="_frontend">4.1.1. Frontend</h4>
 <div class="ulist">
@@ -1627,7 +1634,7 @@ Por lo tanto, contiene la descripción de caja blanca de bloques de construcció
 <h3 id="_nivel_1_caja_blanca_del_sistema_general">5.1. Nivel 1: Caja blanca del Sistema General</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/building_block_view1.png" alt="building block view1" width="988" height="638">
+<img src="./images/building_block_view1.png" alt="building block view1" width="999" height="638">
 </div>
 </div>
 <div class="dlist">
@@ -1678,7 +1685,7 @@ Por lo tanto, contiene la descripción de caja blanca de bloques de construcció
 <h3 id="_nivel_2">5.2. Nivel 2</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/building_block_view2.png" alt="building block view2" width="1003" height="638">
+<img src="./images/building_block_view2.png" alt="building block view2" width="990" height="638">
 </div>
 </div>
 <div class="dlist">
@@ -1717,7 +1724,7 @@ Por lo tanto, contiene la descripción de caja blanca de bloques de construcció
 <h3 id="_nivel_3">5.3. Nivel 3</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/building_block_view3.png" alt="building block view3" width="999" height="638">
+<img src="./images/building_block_view3.png" alt="building block view3" width="1039" height="638">
 </div>
 </div>
 <div class="dlist">
@@ -1776,7 +1783,7 @@ Por lo tanto, contiene la descripción de caja blanca de bloques de construcció
 </div>
 </div>
 <div class="sect1">
-<h2 id="section-runtime-view">6. Vista en tiempo de ejecución</h2>
+<h2 id="section-runtime-view">6. Vista en Tiempo de Ejecución</h2>
 <div class="sectionbody">
 <div class="sidebarblock arc42help">
 <div class="content">
@@ -2064,7 +2071,7 @@ cualquier tipo que sea capaz de mostrar nodos y canales de la infraestructura.</
 </div>
 </div>
 <div class="sect1">
-<h2 id="section-concepts">8. Conceptos transversales</h2>
+<h2 id="section-concepts">8. Conceptos Transversales</h2>
 <div class="sectionbody">
 <div class="sidebarblock arc42help">
 <div class="content">
@@ -2165,13 +2172,13 @@ Así, son una contribución importante para lograr las cualidades internas de tu
 </div>
 </div>
 <div class="sect2">
-<h3 id="_arquitectura_de_microservicios">8.1. Arquitectura de microservicios</h3>
+<h3 id="_arquitectura_de_microservicios">8.1. Arquitectura de Microservicios</h3>
 <div class="paragraph">
 <p>Hemos decidido que nuestra arquitectura se basará en microservicios, lo que significa que cada parte de la aplicación se dividirá en un servicio que realiza una función específica. Los servicios pueden comunicarse entre sí utilizando sus respectivas API. Además, en nuestra arquitectura tienen mucha importancia el papel del API Gateway, cuya función es servir como intermediario en la interacción entre servicios, de forma que estos solo se encuentren ligeramente acoplados al gateway y no a múltiples servicios diferentes.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_experiencia_del_usuario">8.2. Experiencia del usuario</h3>
+<h3 id="_experiencia_del_usuario">8.2. Experiencia del Usuario</h3>
 <div class="paragraph">
 <p>La aplicación será un sitio web donde los usuarios podrán jugar a WICHAT. La funcionalidad básica consiste en mostrar una imagen y una pregunta, y el usuario deberá seleccionar la opción correcta. Además es el propio usuario el que, si se encuentra atascado en una pregunta, puede hacer una consulta, pidiendo una pista, a un modelo de lenguaje.</p>
 </div>
@@ -2826,7 +2833,70 @@ asegurándonos de que cada servicio solo modifique los datos que le corresponden
 </div>
 </div>
 <div class="sect1">
-<h2 id="section-glossary">12. Glosario</h2>
+<h2 id="section-testing-report">12. Informe de Pruebas</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_test_unitarios">12.1. Test unitarios</h3>
+<div class="paragraph">
+<p>Cada componente del Front-End tiene sus correspondientes pruebas unitarias que verfican que funciona correctamente, proporcionando seguridad, fiabilidad y consistencia al proyecto realizado.</p>
+</div>
+<div class="paragraph">
+<p><strong>Cobertura de código</strong></p>
+</div>
+<div class="paragraph">
+<p>Para la cobertura de código utilizamos la herramienta SonarQube.Esta herramienta ofrece una métrica que indica qué porcentaje del código fuente ha sido ejecutado por las pruebas automatizadas (unitarias, de integración, etc.). Es un indicador clave de la calidad del software y de cuán bien está siendo probado.
+Para este proyecto nos piden un 80% de cobertura de código y menos de un 3% de duplicación. En la siguiente imagen vemos como cumplimos con estos dos parámetros:</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="./images/sonarqube.png" alt="Imagen SonarQube" width="600">
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_test_e2e">12.2. Test E2E</h3>
+<div class="paragraph">
+<p>Los tests end-to-end (E2E) se utilizan para verificar que toda la aplicación funciona correctamente desde la perspectiva del usuario final. Simulan escenarios reales de uso, interactuando con la interfaz tal como lo haría un usuario, para asegurar que todos los componentes del sistema (frontend, backend, base de datos, etc.) funcionan como se espera.</p>
+</div>
+<div class="paragraph">
+<p>En nuestro proyecto hemos incorporado los siguientes casos de prueba E2E:</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><strong>Cambio de contraseña: </strong>
+Verifica el correcto funcionamiento del formulario de cambio de contraseña, incluyendo los casos de éxito y los principales errores de validación: coincidencia entre contraseñas, longitud mínima, uso de mayúsculas, números, espacios y manejo de errores en la contraseña actual.</p>
+</li>
+<li>
+<p><strong>Simulación de un juego: </strong>
+Verifica que el usuario pueda configurar e iniciar una partida con distintas opciones, completar o salir de ella antes de tiempo, consultar el historial de partidas jugadas y solicitar pistas al modelo LLM durante la partida.</p>
+</li>
+<li>
+<p><strong>Inicio de sesión: </strong>
+Comprueba que el sistema gestione correctamente intentos de inicio de sesión con credenciales inválidas, incluyendo la visualización de mensajes de error y la limitación de intentos fallidos por motivos de seguridad.</p>
+</li>
+<li>
+<p><strong>Registro de usuario: </strong>
+Verifica que un nuevo usuario pueda completar el formulario de registro correctamente y que el sistema gestione adecuadamente errores comunes como contraseñas inválidas, contraseñas no coincidentes y nombres de usuario ya registrados.</p>
+</li>
+</ol>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_test_de_carga">12.3. Test de carga</h3>
+<div class="paragraph">
+<p>Los tests de carga miden el rendimiento antes de la carga normal o de carga máxima. Para llevar a cabo estas pruebas hemos utilizado la herramienta Artillery. Mediante ficheros .yml podíamos especificar todos los escenarios posibles.</p>
+</div>
+<div class="paragraph">
+<p>Toda la información sobre las pruebas realizadas en nuestro trabajo aparece en el este enlace:
+<a href="pdfs/Informe_Resultados_Pruebas_De_Carga.pdf">Informe de resultados de pruebas de carga en PDF</a></p>
+</div>
+<div style="page-break-after: always;"></div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="section-glossary">13. Glosario</h2>
 <div class="sectionbody">
 <div class="sidebarblock arc42help">
 <div class="content">
@@ -2958,7 +3028,7 @@ servicios como protección al comprador y al vendedor.</em></p></td>
 <div id="footer">
 <div id="footer-text">
 Version 8.2 ES<br>
-Last updated 2025-05-04 22:30:26 +0200
+Last updated 2025-05-04 22:35:32 +0200
 </div>
 </div>
 </body>
